--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Comment</groupId>
-    <artifactId>Comment</artifactId>
+    <groupId>Post</groupId>
+    <artifactId>Post</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
